@@ -1,3 +1,5 @@
+1707.	[contrib]	sdb/ldap updated to version 1.0-beta.
+
 1701.	[doc]		A minimal named.conf man page.
 
 1700.	[func]		nslookup is no longer to be treated as deprecated.
